<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/white"
    tools:context="com.example.befit.ProfileActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="0dp"
        android:text="@string/basicinfo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/f_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="6dp"
        android:layout_y="35dp"
        android:text="@string/wgh" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="80dp"
        android:layout_height="34dp"
        android:layout_x="220dp"
        android:layout_y="20dp" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_x="85dp"
        android:layout_y="15dp"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="6dp"
        android:layout_y="70dp"
        android:text="@string/height" />

    <EditText
        android:id="@+id/feet"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_x="85dp"
        android:layout_y="55dp"
        android:ems="10"
        android:inputType="number" >
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="130dp"
        android:layout_y="70dp"
        android:text="@string/ft" />

    <EditText
        android:id="@+id/inch"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_x="150dp"
        android:layout_y="55dp"
        android:ems="10"
        android:inputType="number" >
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="190dp"
        android:layout_y="70dp"
        android:text="@string/in" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="120dp"
        android:layout_height="34dp"
        android:layout_x="220dp"
        android:layout_y="60dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="6dp"
        android:layout_y="110dp"
        android:text="@string/age" />

    <EditText
        android:id="@+id/age"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_x="85dp"
        android:layout_y="95dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="190dp"
        android:layout_y="110dp"
        android:text="@string/yrs" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="133dp"
        android:layout_height="34dp"
        android:layout_x="90dp"
        android:layout_y="140dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="6dp"
        android:layout_y="150dp"
        android:text="@string/sex" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="200dp"
        android:text="@string/goal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="260dp"
        android:text="@string/notification"
        android:textAppearance="?android:attr/textAppearanceMedium" />

      <Switch
        android:id="@+id/switch1"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_x="6dp"
        android:layout_y="290dp"
        android:text="@string/getnotify" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_x="6dp"
        android:layout_y="320dp"
        android:text="@string/sound" /> -->

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="6dp"
        android:layout_y="230dp"
        android:text="@string/active" />

    <EditText
        android:id="@+id/hr"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_x="85dp"
        android:layout_y="215dp"
        android:ems="10"
        android:inputType="number" >
    </EditText>

    <EditText
        android:id="@+id/min"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_x="185dp"
        android:layout_y="215dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="250dp"
        android:layout_y="230dp"
        android:text="@string/min" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="150dp"
        android:layout_y="230dp"
        android:text="@string/hr" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="6dp"
        android:layout_y="270dp"
        android:text="@string/workoutschedule"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="134dp"
        android:layout_height="34dp"
        android:layout_x="140dp"
        android:layout_y="290dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_x="80dp"
        android:layout_y="340dp"
        android:text="@string/save" />

</AbsoluteLayout>