<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.samplebefit.MainActivity" 
    android:background="@drawable/white">

    <Button
        android:id="@+id/buttonCreateNewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonLogin"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="111dp"
        android:text="@string/new_account" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_centerVertical="true"
        android:text="@string/login" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLogin"
        android:layout_alignLeft="@+id/editTextEmail"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress" 
        android:textColor="@android:color/black">
        
        <requestFocus />        
    </EditText>

</RelativeLayout>
